fix text contrast

--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,9 @@
   color-scheme: light dark;
   --window-color: light-dark(#ddd, #000);
   --background-color: light-dark(#fff, #333);
+  --background-color-alt: light-dark(#000, #000);
   --text-color: light-dark(#000, #fff);
+  --text-color-alt: light-dark(#fff, #fff);
 }
 
 body {
